--- a/pages.njk
+++ b/pages.njk
@@ -2,7 +2,7 @@
 title: Pages
 layout: layout.html
 ---
-<div class="more-page">
+<div class="pages">
     <ul>
         {% for page in collections.page | sort(attribute='data.title') %}
             <li>
