--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -50,7 +50,7 @@
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
                 </div>
-                <div class="title-bar-title"><a class="backlink {{ special | default: "no-slash" }}" href="../">{{ special | default: "" }}</a><span class="title-text">{{ title }}</span></div>
+                <div class="title-bar-title"><a class="backlink {{ special | default: "no-slash" }}" href="../">{{ special | default: "" }}</a><h1 class="title-text">{{ title }}</h1></div>
                 <div class="lines" aria-hidden="true">
                     <hr class="title-bar-line">
                     <hr class="title-bar-line">
