--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -10,7 +10,7 @@ layout: "layout.html"
 
     <div class="e-content">{{ content | safe}}</div>
 
-    <p class="date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
+    <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
 
 {#    <div class="tags">
         <p>Tags:</p>
