--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
     background-image:  repeating-linear-gradient(45deg, var(--border-color) 25%, transparent 25%, transparent 75%, var(--border-color) 75%, var(--border-color)), repeating-linear-gradient(45deg, var(--border-color) 25%, var(--border-color-alt) 25%, var(--border-color-alt) 75%, var(--border-color) 75%, var(--border-color));
     background-position: 0 0, 3px 3px;
     background-size: 6px 6px;
-    width: 100vw;
+    /* width: 100vw; */
     margin: 0;
 }
 
@@ -139,6 +139,12 @@ nav p {
     box-shadow: 5px 5px 0 var(--lt-grey);
 }
 
+.big-window {
+    min-width: 100%;
+    min-height: 100vh;
+    margin: 0;
+}
+
 .title-bar {
     height: max-content;
     border-bottom: 2px solid var(--text-color);
@@ -155,6 +161,32 @@ nav p {
 .lines {
     width: 100%;
     flex: 1 1;
+}
+
+.lines-left {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    align-items: center;
+}
+
+.lines-left-of-button {
+    flex-grow: 1;
+}
+
+.big-button {
+    border: 2px solid var(--text-color);
+    margin: 2px;
+    padding: 2px;
+    height: 1rem;
+    width: 1rem;
+    cursor: pointer;
+}
+
+.inside-button {
+    background-color: var(--text-color);
+    height: 100%;
+    width: 100%;
 }
 
 .title-bar-line {
@@ -217,6 +249,7 @@ nav p {
 main {
     background-color: var(--bg-color);
     padding: 1rem;
+    max-width: 90ch;
 }
 
 main *:first-child {
