--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -16,6 +16,7 @@
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
     <script src="/js/bigButton.js" async></script>
+    <script src="/js/time.js" async></script>
 </head>
 <body>
 
@@ -39,6 +40,7 @@
                 </li>
             </ul>
         </nav>
+        <div class="time">00/00/0000 00:00</div>
     </header>
 
     <div class="content-window">
