--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,25 @@ a:hover {
 
 /* Navigation */
 
+header {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.time {
+    background-color: var(--bg-color);
+    border: 2px solid var(--text-color);
+    margin-bottom: 16px;
+    padding: 3.2px 6.4px;
+    font-family: var(--main-font-family);
+    font-weight: bold;
+}
+
+nav {
+    max-width: 100vw;
+}
+
 nav ul {
     background-color: var(--bg-color);
     border: 2px solid var(--text-color);
@@ -401,4 +420,10 @@ footer {
 
 .link-icon:hover {
     background-color: var(--lt-grey)
+}
+
+@media (max-width: 600px) {
+    .time {
+        display: none;
+    }
 }
