--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#b2b2b2">
+    <meta name="theme-color" content="#706deb">
     <title>{{ title }}</title>
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
     <link rel=icon href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
