Add subject to email link

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -17,7 +17,7 @@
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
     <script type="module" src="/js/scripts.js"></script>
 </head>
-<body style="display: none;">
+<body>
 
     <!-- <div class="color-div"></div> -->
 
@@ -77,6 +77,12 @@
         <main>
                 {{ content }}
         </main>
+        <!-- <div style="position: relative;">
+            <div class="fold-border"></div>
+            <div class="fold"></div>
+        </div> -->
+        <!-- <hr class="page">
+        <hr class="page"> -->
     </div>
 
     <footer id="footer">
