Post and changed title bar  hr to divs

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -48,28 +48,28 @@
         <div class="title-bar">
             <div class="title-lines">
                 <div class="lines" aria-hidden="true">
-                    <hr class="title-bar-line">
-                    <hr class="title-bar-line">
-                    <hr class="title-bar-line">
-                    <hr class="title-bar-line">
-                    <hr class="title-bar-line">
+                    <div class="title-bar-line"></div>
+                    <div class="title-bar-line"></div>
+                    <div class="title-bar-line"></div>
+                    <div class="title-bar-line"></div>
+                    <div class="title-bar-line"></div>
                 </div>
                 <div class="title-bar-title"><a class="backlink {{ special | default: "no-slash" }}" href="../">{{ special | default: "" }}</a><h1 class="title-text {{ special | default: "" }}">{{ title }}</h1></div>
                 <div class="lines lines-left" aria-hidden="true">
                     <div class="lines-left-of-button">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
                     </div>
                     <div class="big-button" id="big-button"><div class="inside-button"></div></div>
                     <div class="lines-right-of-button">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
-                        <hr class="title-bar-line">
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
                     </div>
                 </div>
             </div>
