--- a/blogroll.njk
+++ b/blogroll.njk
@@ -19,7 +19,7 @@ tags: [slashpage, page]
                 {% else %}
                     <a class="link-icon" href="{{ blog.data.link }}">
                         <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" alt="{{ blog.data.title }}" height="31" width="88">
-                            <rect class="rect-icon" width="88" height="31" fill="#{{ blog.data.color }}">
+                            <rect class="icon-rect" width="88" height="31" fill="#{{ blog.data.color }}">
                             {% if blog.data.image %}
                                 <img class="icon-image" src="{{ blog.data.image }}" alt="{{ blog.data.title }}">
                             {% endif %}
