Update blogroll intro

--- a/blogroll.njk
+++ b/blogroll.njk
@@ -6,7 +6,7 @@ tags: [slashpage, page]
 
 <p>There are so many blogs in my RSS reader that I'm having trouble getting this page started. In an effort to just get something going, here are a few. (More to come.)</p>
 
-<p class="note">Note that I use the term "blogroll" loosely here. Most linked websites are blogs, but some may be digital gardens, wikis, et cetera.</p>
+<p class="note">Note that I use the term "blogroll" loosely here. Most linked websites are blogs, but some may be digital gardens, wikis, portfolios, newsletters, et cetera.</p>
 
 <div class="blogroll">
     <ul>
