--- a/css/styles.css
+++ b/css/styles.css
@@ -285,7 +285,7 @@ nav p {
 main {
     background-color: var(--bg-color);
     padding: 1rem;
-    max-width: 90ch;
+    /* max-width: 90ch; */
 }
 
 .main-big {
